# EventFlow-Server

./: .gitignore  CalendarServer.code-workspace  Cargo.toml  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: clippy.yml
datastructures/: calendar.jsonc  calendarevent.jsonc  steps.jsonc  user.jsonc
entity/: Cargo.toml  readme.md
entity/src/: calendar.rs  calendar_event_modifier.rs  calendar_filter.rs  ical.rs  lib.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/src/: field.rs  lib.rs  m20220101_000001_create_users.rs  m20221207_121314_create_icals.rs  m20221207_221915_create_calendar.rs  m20221207_223411_create_calendar_filter.rs  m20221207_223420_create_calendar_event_modifier.rs  operation.rs
ns_scraper/: Cargo.toml
ns_scraper/src/: lib.rs  route.rs  route_builder.rs  route_finder.rs
src/: calendar.rs  database.rs  errors.rs  main.rs  routes.rs
src/app/: api.rs  middleware.rs  mod.rs  routes.rs
src/app/calendars/: dto.rs
src/app/event/: dto.rs
src/app/events/: dto.rs  mod.rs  routes.rs
src/app/filters/: dto.rs  mod.rs
src/app/rules/: dto.rs  mod.rs
src/app/sources/: dto.rs  mod.rs  routes.rs
src/app/users/: dto.rs  mod.rs  routes.rs
src/common/: database.rs  ical.rs  mod.rs
src/dto/: mod.rs  user.rs
src/entity/: calendar_event.rs  event.rs  mod.rs  user.rs
src/handlers/: error.rs  events.rs  filter.rs  mod.rs  modifier.rs  response.rs  source.rs  user.rs
src/openapi/: api.rs
src/routes/: calendar.rs  filter.rs  ical.rs  mod.rs  modifiers.rs  source.rs  user.rs
src/tests/: data.rs  events.rs  mod.rs  user.rs  users.rs
src/tests/app/: mod.rs  users.rs
src/tests/handlers/: events.rs  sources.rs
src/tests/integration/: events.rs  mod.rs  sources.rs  users.rs
src/tests/unit/: events.rs  mod.rs  sources.rs  users.rs
