[package]
name = "calendar_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icalendar = { version = "0.14.0", features = ["parser"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.37"
actix-web = "4"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
regex = "1"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1" 
actix-rt = "2.7.0"
dotenv = "0.15.0"
tracing = "0.1.37"
ns_scraper = { path = "./ns_scraper" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
mongodb = "2.3.1"
actix-cors = "0.6.4"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }