[package]
name = "ns_scraper"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ns_scraper"
path = "src/lib.rs"

[dependencies]

reqwest = {version = "0.11", features = ["blocking"]}
async-std = { version = "^1", features = ["attributes", "tokio1"] }
scraper = "0.13.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
chrono = "0.4.23"